--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Character Recognition</string>
+    <string name="version">Version 1.0</string>
+    <string name="info_author">Timofey Shufletyuk</string>
 </resources>
