--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="storage">Storage</string>
     <string name="define">Define</string>
     <string name="draw_on_the_canvas_characters">Draw on the canvas characters 0 to 9</string>
+    <string name="dismiss">Dismiss</string>
 
     <string-array name="character_list">
         <item>0</item>
